--- a/style.css
+++ b/style.css
@@ -143,4 +143,21 @@ body{
     .hardPadding{
         padding-bottom: 64%;
     }
+    
+    h1{
+        margin-bottom: 1rem;
+        font-size: 3rem;
+        margin-top: 0;
+    }
+    
+    p{
+        margin: 0;
+        font-size: 0.9rem;
+    }
+
+    #message{
+        margin-top: 0.6rem;
+        font-size: 1rem;
+        font-weight: 500;
+    }
 }
