--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     color: white;
 }
 
-.mb-2{
-    margin-bottom: 1.5rem;
-}
-
 .text-sp{
     letter-spacing: 0.06rem;
 }
@@ -38,6 +34,7 @@ body{
 }
 
 #header{
+    margin-bottom: 0.5rem;
     padding: 1.5rem 0;
 }
 
@@ -56,7 +53,7 @@ body{
 
 .container{
     margin: 0 auto;
-    max-width: 600px;
+    max-width: 576px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -108,7 +105,7 @@ body{
     margin: 1%;
     border-radius: 50%;
     box-shadow: 0px 0px 2px white;
-    padding: 15% 0;
+    padding: 13% 0 17% 0;
     width: 30%;
 }
 
@@ -135,7 +132,60 @@ body{
     transition: all 0.3s;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (min-width: 577px) and (max-width: 992px){
+
+    #main-container{
+        padding: 1rem;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+    }
+
+    section{
+        height: fit-content;
+    }
+
+    #sec-1{
+        width: 55%;
+    }
+
+    #sec-2{
+        width: 45%;
+    }
+
+    #header{
+        background: #232323!important;
+    }
+
+    .easyPadding{
+        padding-bottom: 32%;
+    }
+    
+    .hardPadding{
+        padding-bottom: 64%;
+    }
+    
+    h1{
+        margin-bottom: 1rem;
+        font-size: 2.3rem;
+        margin-top: 0;
+    }
+    
+    p{
+        margin: 0;
+        font-size: 0.9rem;
+    }
+
+    #message{
+        margin-top: 0.6rem;
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+}
+
+@media screen and (max-width: 576px){
+
     .easyPadding{
         padding-bottom: 32%;
     }
